apps/garage-relay/endpointslice.yaml
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: garage-omv
  namespace: garage-relay
  labels:
    kubernetes.io/service-name: garage
addressType: IPv4
ports:
  - name: s3
    port: 3900
    protocol: TCP
endpoints:
  - addresses:
      - "192.168.1.190"
    conditions:
      ready: true
