apps/garage-relay/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: garage
  namespace: garage-relay
spec:
  type: ClusterIP
  ports:
    - name: s3
      port: 3900
      protocol: TCP
      targetPort: 3900
