apps/garage-relay/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: garage-s3
  namespace: garage-relay
spec:
  parentRefs:
    - name: star-fuochi-top
      namespace: cilium
      sectionName: https
  hostnames:
    - s3.fuochi.top
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: garage
          port: 3900
